# MTM-RECORDER

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  installer.nsi
include/: recorder.h  ui.h
src/: main.cpp  recorder.cpp  ui.cpp
